--- a/shop-order/src/main/resources/application.yml
+++ b/shop-order/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 8082
+  tomcat:
+    max-threads: 10 # tomcat的最大线程数 默认200
 spring:
   application:
     name: shop-order
@@ -12,6 +14,10 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+    sentinel:
+      transport:
+        dashboard: localhost:8858
+        port: 8719
   jpa:
     properties:
       hibernate:
@@ -20,3 +26,7 @@ spring:
           auto: update
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
         show_sql: true
+#配置ribbon负载均衡策略
+shop-product:
+  ribbon:
+    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
