初始化网关模块，以及Sentinel持久化和容错机制反馈

--- a/shop-order/src/main/resources/application.yml
+++ b/shop-order/src/main/resources/application.yml
@@ -30,3 +30,7 @@ spring:
 shop-product:
   ribbon:
     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
+#开启Feign对sentinel的支持
+feign:
+  sentinel:
+    enabled: true
