--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>shop-user</module>
         <module>shop-product</module>
         <module>shop-order</module>
+        <module>shop-gateway</module>
     </modules>
 
     <properties>
