--- a/shop-gateway/src/main/resources/application.yml
+++ b/shop-gateway/src/main/resources/application.yml
@@ -4,12 +4,10 @@ spring:
   application:
     name: api-gateway
   cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
     gateway:
-      routes:
-        - id: product-service
-          uri: http://localhost:8081
-          order: 1
-          predicates:
-            - Path=/product/**
-          filters:
-            - StripPrefix=1
+      discovery:
+        locator:
+          enabled: true
