网关-自定义断言

--- a/shop-gateway/src/main/resources/application.yml
+++ b/shop-gateway/src/main/resources/application.yml
@@ -11,3 +11,11 @@ spring:
       discovery:
         locator:
           enabled: true
+      routes:
+        - id: product-service
+          uri: lb://product-service
+          predicates:
+            - Path=/product/**
+            - Age=16,60
+          filters:
+            - StripPrefix=1
